Fix for background attachment issue on iOS

--- a/less/widgets/feature.less
+++ b/less/widgets/feature.less
@@ -92,6 +92,10 @@
         height: 100%;
         background-color: fade(@color__feature-content--background, 40%);
     }
+    
+    .edit & {
+        background-attachment: initial;
+    }    
 }
 
 
